--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/phamhophi/NJS101x_LAB#readme",
   "devDependencies": {
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
     "express": "^4.18.1"
   }
 }
