--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "express": "^4.18.1",
     "express-handlebars": "3.0",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2",
     "sequelize": "^6.24.0"
   }
