--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "express-validator": "^6.14.2",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2",
     "sequelize": "^6.24.0"
   }
